Refactor and enhance debugger tests and core classes
Refactored and reformatted JavaDoc comments, improved code formatting, and enhanced clarity in core debugger classes. Updated test classes to use dynamic line number resolution and added new end-to-end tests for step-into, step-out, conditional breakpoints, watch expressions, exception events, and thread management. Improved maintainability and readability across the codebase.